--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/foto.webp" />
-    <meta name="viewport" content="Welcome to the portfolio of this great little Front-End dreamer" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Welcome to the portfolio of this great little Front-End dreamer" />
+    <meta name="keywords" content="Vite, React, Netlify ,HTML, CSS, JavaScript">
+    <meta name="author" content="Agustin Godinez Montaño">
     <title>Portfolio Agustin</title>
   </head>
   <body>
